# HexTick

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  backend-entrypoint.sh  docker-compose.yml  pyproject.toml
HexTick/HexTick/: settings.py  urls.py  wsgi.py
HexTick/world/: actions.py  admin.py
HexTick/world/migrations/: 0002_alter_faction_combat_skill_alter_faction_speed_and_more.py
HexTick/world/models/: __init__.py  characters.py  faction.py  hex.py  party.py  settings.py  ticks.py
backend/: manage.py
backend/HexTick/: asgi.py  settings.py  urls.py
backend/world/: actions.py  api.py  utils.py
backend/world/migrations/: 0001_initial.py  0003_pointofinterest_hidden_and_more.py  0004_pointofinterest_age_alter_faction_current_action_and_more.py  0005_partytick_notes_worldsettings_current_tick_and_more.py  0006_faction_color.py  0007_faction_next_action_faction_notes.py  0008_knowledge_age_alter_pointofinterest_age.py  0009_faction_is_dead.py  0010_knowledge_related_knowledge.py  0011_knowledge_map.py  0012_alter_hex_terrain_type.py  0013_faction_knowledge.py
backend/world/models/: __init__.py  characters.py  faction.py  hex.py  settings.py  ticks.py  world.py
design_docs/: API.md  Factions.md  HexTick.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  maps.ts  tick.ts
frontend/src/components/AddFactionModal/: AddFactionModal.module.css  AddFactionModal.tsx
frontend/src/store/: useGameStore.ts
frontend/src/types/: index.ts
(+29 files in other folders)
