[project]
name = "HexTick"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Josh Fink",email = "laggard12@proton.me"},
]
dependencies = [
    "django>=5.2",
    "Pillow>=10.0",
    "psycopg2-binary>=2.9",
    "django-storages[s3]>=1.14",
    "boto3>=1.34",
]
requires-python = "==3.14.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
