[project]
name = "HexTick"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Josh Fink",email = "laggard12@proton.me"},
]
dependencies = [
    "django>=5.2",
    "Pillow>=10.0",
    "psycopg2-binary>=2.9",
    "django-ninja>=1.3",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
makemigrations = {shell = "set -a && . ./.env && set +a && python backend/manage.py makemigrations"}
